This is the revision history for Email-FromHandle

0.011    2006-06-13
         added this changelog