@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 use strict;
-use Test::More tests => 6;
+use Test::More tests => 9;
 use Symbol;
 
 sub read_file   { local $/; local *FH; open FH, shift or die $!; return <FH>; }
@@ -33,3 +33,25 @@ is(
   "Joanna, All\n",
   "first line gotten as requested",
 );
+
+is(
+  <$mail>,
+  "Received: (qmail 1679 invoked by uid 503); 13 Nov 2002 10:10:49 -0000\n",
+  "first header line gotten",
+);
+
+{
+  pipe(my($rdr, $wtr));
+  unless (fork) {
+    close $rdr;
+    seek $mail_handle, 0, 0;
+    my $mail = Email::Simple::FromHandle->new($mail_handle);
+    $mail->stream_to($wtr);
+    exit 0;
+  }
+  close $wtr;
+  $mail = Email::Simple::FromHandle->new($rdr);
+  is $mail->as_string, $mail_text, "text from pipe";
+  eval { $mail->as_string };
+  like $@, qr/illegal seek/i, "illegal seek on pipe";
+}
